# pet_projects

./: README.md  tracker.py
prog_pyqt5/: Makefile  README.md  config.txt  create_py_file_from_ui.bat.bat  main.py  pyproject.toml  tracker.py  tracker.ui
